--- a/app/src/main/res/layout/activity_registro_ventas.xml
+++ b/app/src/main/res/layout/activity_registro_ventas.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.RegistroVentas">
-
-
+    tools:context=".ventas.RegistroVentas">
 
     <TextView
         android:id="@+id/textView"
