--- a/app/src/main/res/layout/activity_cardview_registro.xml
+++ b/app/src/main/res/layout/activity_cardview_registro.xml
@@ -5,26 +5,15 @@
     android:layout_height="150dp"
     xmlns:Cardview="http://schemas.android.com/apk/res-auto"
     Cardview:cardCornerRadius="8dp"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    android:id="@+id/cardview">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="72dp"
-            android:text="@string/cliente"
-            android:theme="@style/titulos"
-            Cardview:layout_constraintBottom_toBottomOf="parent"
-            Cardview:layout_constraintEnd_toEndOf="parent"
-            Cardview:layout_constraintTop_toTopOf="parent"
-            Cardview:layout_constraintVertical_bias="0.175" />
-
-        <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/cantProducto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -36,6 +25,7 @@
             Cardview:layout_constraintVertical_bias="0.173" />
 
         <TextView
+            android:id="@+id/totalVenta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -43,7 +33,18 @@
             android:text="@string/cliente"
             android:theme="@style/titulos"
             Cardview:layout_constraintStart_toStartOf="parent"
-            Cardview:layout_constraintTop_toBottomOf="@+id/textView8" />
+            Cardview:layout_constraintTop_toBottomOf="@+id/cantProducto" />
+        <TextView
+            android:id="@+id/fecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="72dp"
+            android:text="@string/cliente"
+            android:theme="@style/titulos"
+            Cardview:layout_constraintBottom_toBottomOf="parent"
+            Cardview:layout_constraintEnd_toEndOf="parent"
+            Cardview:layout_constraintTop_toTopOf="parent"
+            Cardview:layout_constraintVertical_bias="0.175" />
 
 
     </android.support.constraint.ConstraintLayout>
