--- a/app/src/main/res/layout/activity_card_producto.xml
+++ b/app/src/main/res/layout/activity_card_producto.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cantproducto_card_view"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
+    android:layout_height="1900dp"
     android:layout_margin="0dp"
     android:background="#fff"
     card_view:cardCornerRadius="4dp"
@@ -30,7 +30,6 @@
             android:textStyle="bold" />
 
         <TextView
-
             android:id="@+id/txttitvent"
             android:layout_below="@id/txtdescvent"
             android:layout_width="match_parent"
@@ -38,13 +37,55 @@
             android:layout_height="wrap_content"
             android:text="Subtitulo"
             android:textColor="#000"
-            android:textSize="16sp"
+            android:textSize="18sp"
             />
+        <TextView
+            android:id="@+id/txtprecioU"
+            android:layout_below="@id/txttitvent"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:layout_height="wrap_content"
+            android:text="Precio"
+            android:textColor="#000"
+            android:textSize="18sp"
+            />
+
+        <TextView
+            android:id="@+id/txtlargo"
+            android:layout_below="@+id/txtprecioU"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:layout_height="wrap_content"
+            android:text="Largo"
+            android:textColor="#000"
+            android:textSize="18sp"
+            />
+        <TextView
+            android:id="@+id/txtancho"
+            android:layout_below="@+id/txtlargo"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:layout_height="wrap_content"
+            android:text="ancho"
+            android:textColor="#000"
+            android:textSize="18sp"
+            />
+        <TextView
+            android:id="@+id/txtarea"
+            android:layout_below="@+id/txtancho"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:layout_height="wrap_content"
+            android:text="Area"
+            android:textColor="#000"
+            android:textSize="18sp"
+            />
+
         <EditText
             android:id="@+id/edit_cantidad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/txttitvent"
+            android:layout_below="@+id/txtarea"
             android:text="1"
 
             android:textAlignment="center"
