--- a/app/src/main/res/layout/activity_form_cliente.xml
+++ b/app/src/main/res/layout/activity_form_cliente.xml
@@ -75,13 +75,14 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/agregarCliente"
                 android:layout_marginTop="24dp"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:id="@+id/button"
                 android:background="#383F5A"
                 android:textColor="#ffffff"
+                android:onClick="agregarCliente"
                 android:text="Agregar cliente" />
 
         </LinearLayout>
