--- a/app/src/main/res/layout/activity_cardview_registro.xml
+++ b/app/src/main/res/layout/activity_cardview_registro.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="80dp"
     xmlns:Cardview="http://schemas.android.com/apk/res-auto"
     Cardview:cardCornerRadius="8dp"
     android:layout_margin="8dp"
@@ -13,12 +13,14 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/cantProducto"
+            android:id="@+id/nomvendedor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:text="@string/cliente"
             android:theme="@style/titulos"
+            android:textStyle="bold"
+            android:textColor="#000"
             Cardview:layout_constraintBottom_toBottomOf="parent"
             Cardview:layout_constraintStart_toStartOf="parent"
             Cardview:layout_constraintTop_toTopOf="parent"
@@ -32,8 +34,10 @@
             android:layout_marginTop="10dp"
             android:text="@string/cliente"
             android:theme="@style/titulos"
+            android:textStyle="bold"
+            android:textColor="#000"
             Cardview:layout_constraintStart_toStartOf="parent"
-            Cardview:layout_constraintTop_toBottomOf="@+id/cantProducto" />
+            Cardview:layout_constraintTop_toBottomOf="@+id/nomvendedor" />
 
         <TextView
             android:id="@+id/fecha"
@@ -42,6 +46,8 @@
             android:layout_marginEnd="72dp"
             android:text="@string/cliente"
             android:theme="@style/titulos"
+            android:textStyle="bold"
+            android:textColor="#000"
             Cardview:layout_constraintBottom_toBottomOf="parent"
             Cardview:layout_constraintEnd_toEndOf="parent"
             Cardview:layout_constraintTop_toTopOf="parent"
@@ -53,8 +59,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="72dp"
             android:layout_marginTop="6dp"
+            android:textStyle="bold"
             android:text="@string/cliente"
             android:theme="@style/titulos"
+            android:textColor="#000"
             Cardview:layout_constraintEnd_toEndOf="parent"
             Cardview:layout_constraintTop_toTopOf="parent" />
 
