--- a/app/src/main/res/layout/activity_registro_ventas.xml
+++ b/app/src/main/res/layout/activity_registro_ventas.xml
@@ -1,93 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ventas.RegistroVentas">
+    android:id="@+id/recyclerventa"
+    >
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:paddingTop="40dp"
-        android:text="Ventas"
-        android:textAppearance="@android:style/TextAppearance.Theme"
-        tools:ignore="MissingConstraints"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_marginTop="16dp"
-            android:layout_weight="1"
-            android:textAlignment="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cliente:" />
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_marginTop="16dp"
-            android:layout_weight="1"
-            android:textAlignment="center"
-            android:layout_width="wrap_content"
-            android:textColor="#000"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Vendedor:"
-            android:textAlignment="center" />
-
-        <TextView
-            android:id="@+id/nomvendedor"
-            android:layout_weight="1"
-            android:layout_marginTop="16dp"
-            android:textAlignment="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="nombrevendedor"
-            android:textColor="#000"
-            tools:ignore="MissingConstraints"/>
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Total:"
-        android:textAlignment="center"
-        android:textAppearance="@android:style/TextAppearance.Theme" />
-    <TextView
-        android:id="@+id/totaltext"
-        android:layout_width="match_parent"
-        android:layout_marginTop="16dp"
-        android:layout_height="wrap_content"
-        android:text="Cantidad total"
-        android:textAlignment="center"
-        android:textColor="#000"
-        tools:textSize="18sp" />
-    <Button
-        android:id="@+id/vendertext"
-        android:textAlignment="center"
-        android:layout_marginTop="46dp"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Vender"
-        android:textColor="#fff"
-        android:background="@color/colorAccent"/>
-</android.support.v7.widget.LinearLayoutCompat>
+</android.support.v7.widget.RecyclerView>
