--- a/app/src/main/res/layout/activity_informacion.xml
+++ b/app/src/main/res/layout/activity_informacion.xml
@@ -6,4 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".Activities.Informacion">
 
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="181dp"
+        android:layout_height="56dp"
+        android:text="ID VENDEDOR: 1"
+        tools:layout_editor_absoluteX="89dp"
+        tools:layout_editor_absoluteY="55dp" />
+
+    <TextView
+        android:paddingTop="60dp"
+        android:id="@+id/textView6"
+        android:layout_width="190dp"
+        android:layout_height="52dp"
+        android:text="NOMBRE: Federico"
+        tools:layout_editor_absoluteX="89dp"
+        tools:layout_editor_absoluteY="144dp" />
+
+    <TextView
+        android:paddingTop="60dp"
+        android:id="@+id/textView8"
+        android:layout_width="193dp"
+        android:layout_height="49dp"
+        android:text="APELLIDO: Abarca"
+        tools:layout_editor_absoluteX="89dp"
+        tools:layout_editor_absoluteY="231dp" />
+
+    <TextView
+        android:paddingTop="60dp"
+        android:id="@+id/textView9"
+        android:layout_width="193dp"
+        android:layout_height="45dp"
+        android:text="USUARIO: Admin"
+        tools:layout_editor_absoluteX="96dp"
+        tools:layout_editor_absoluteY="319dp" />
+
+    <TextView
+        android:paddingTop="60dp"
+        android:id="@+id/textView10"
+        android:layout_width="190dp"
+        android:layout_height="45dp"
+        android:text="PASSWORD: root"
+        tools:layout_editor_absoluteX="97dp"
+        tools:layout_editor_absoluteY="398dp" />
 </android.support.constraint.ConstraintLayout>
